Blender crashes/closes when clicking a workspace tab (that is in fullscreen in a second window) #78688

Closed
opened 2020-07-06 21:28:44 +02:00 by Sebastien Larocque · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.83.1, branch: master, commit date: 2020-06-25 09:47, hash: 8289fc688b

Short description of error
Blender crashes/closes when clicking the “Modeling” tab.

Exact steps for others to reproduce the error

This bug is very particular and you really need to use the attached project to be able to reproduce it.

  • Open the attached Blender project file “Bug_BlenderClosesSuddenly_TwoWindows.blend”
  • There will be two windows. This project has the main window (with the “Shading” tab active) opened on the main monitor and a second window opened on a second monitor extended to the right.
  • Click the “Modeling” tab. At this point, all Blender windows disappear.

This project used to have a few of objects with shaders and a shader for the World. Everything worked correctly for many days until today. I cleaned all the unnecessary objects to isolate the bug.

One symptom about the problem is if you close the secondary window and you click the “Modeling” tab, the content of the “Modeling” tab becomes whatever is present in the secondary window. Blender does not crash in that case.

That happened a few times in the past. It is not the first time I encounter a situation where Blender closes suddenly, but I could not know why and I was not able to reproduce the problem. Blender has already closed suddenly when doing something in version 2.83 and probably other versions since 2.8.

Edit: Sorry, I made a mistake when adding a comment to my report. Just keep in mind that there is probably something corrupted into the UI. Opening the project by unchecking “Load UI” clears all these problems.

Bug_BlenderClosesSuddenly_TwoWindows.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.83.1, branch: master, commit date: 2020-06-25 09:47, hash: `8289fc688b` **Short description of error** Blender crashes/closes when clicking the “Modeling” tab. **Exact steps for others to reproduce the error** This bug is very particular and you really need to use the attached project to be able to reproduce it. * Open the attached Blender project file “Bug_BlenderClosesSuddenly_TwoWindows.blend” * There will be two windows. This project has the main window (with the “Shading” tab active) opened on the main monitor and a second window opened on a second monitor extended to the right. * Click the “Modeling” tab. At this point, all Blender windows disappear. This project used to have a few of objects with shaders and a shader for the World. Everything worked correctly for many days until today. I cleaned all the unnecessary objects to isolate the bug. One symptom about the problem is if you close the secondary window and you click the “Modeling” tab, the content of the “Modeling” tab becomes whatever is present in the secondary window. Blender does not crash in that case. That happened a few times in the past. It is not the first time I encounter a situation where Blender closes suddenly, but I could not know why and I was not able to reproduce the problem. Blender has already closed suddenly when doing something in version 2.83 and probably other versions since 2.8. Edit: Sorry, I made a mistake when adding a comment to my report. Just keep in mind that there is probably something corrupted into the UI. Opening the project by unchecking “Load UI” clears all these problems. [Bug_BlenderClosesSuddenly_TwoWindows.blend](https://archive.blender.org/developer/F8670622/Bug_BlenderClosesSuddenly_TwoWindows.blend)

Added subscriber: @SebBlender

Added subscriber: @SebBlender
Member

Added subscribers: @JulianEisel, @lichtwerk

Added subscribers: @JulianEisel, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, crashes because the second window is in fullscreen - was in Modeling previously as well - (crash does not happen when you leave fullscreen in the second window prior to switching to Modeling workspace in the first window)
Blender cannot find the layout and wants to print a screen name for a screen that is not there (screen_change_prepare returns NULL)...

1  __strlen_avx2                                         0x7ffff041d557 
2  __vfprintf_internal                                   0x7ffff03289ee 
3  buffered_vfprintf                                     0x7ffff0329a2c 
4  __vfprintf_internal                                   0x7ffff0326a94 
5  printf                                                0x7ffff031343f 
6  BKE_workspace_layout_find      workspace.c       305  0x31f9798      
7  ED_workspace_change            workspace_edit.c  158  0x3a2d506      
8  WM_window_set_active_workspace wm_window.c       2426 0x3363983      
9  wm_event_do_notifiers          wm_event_system.c 431  0x332c425      
10 WM_main                        wm.c              478  0x3327e49      
11 main                           creator.c         532  0x2eea41e     

Crash can be prevented by the following (but switching to Modeling workspace still doesnt work then)
P1508: T78688_snippet



diff --git a/source/blender/blenkernel/intern/workspace.c b/source/blender/blenkernel/intern/workspace.c
index 4625fd76293..82cdc5abd84 100644
--- a/source/blender/blenkernel/intern/workspace.c
+++ b/source/blender/blenkernel/intern/workspace.c
@@ -307,7 +307,7 @@ WorkSpaceLayout *BKE_workspace_layout_find(const WorkSpace *workspace, const bSc
       "This should not happen!\n",
       __func__,
       workspace->id.name + 2,
-      screen->id.name + 2);
+      screen ? screen->id.name + 2 : "Unknown");
 
   return NULL;
 }

CC @JulianEisel

Can confirm, crashes because the second window is in fullscreen - was in `Modeling` previously as well - (crash does not happen when you leave fullscreen in the second window prior to switching to `Modeling` workspace in the first window) Blender cannot find the layout and wants to print a screen name for a screen that is not there (`screen_change_prepare` returns NULL)... ``` 1 __strlen_avx2 0x7ffff041d557 2 __vfprintf_internal 0x7ffff03289ee 3 buffered_vfprintf 0x7ffff0329a2c 4 __vfprintf_internal 0x7ffff0326a94 5 printf 0x7ffff031343f 6 BKE_workspace_layout_find workspace.c 305 0x31f9798 7 ED_workspace_change workspace_edit.c 158 0x3a2d506 8 WM_window_set_active_workspace wm_window.c 2426 0x3363983 9 wm_event_do_notifiers wm_event_system.c 431 0x332c425 10 WM_main wm.c 478 0x3327e49 11 main creator.c 532 0x2eea41e ``` Crash can be prevented by the following (but switching to `Modeling` workspace still doesnt work then) [P1508: T78688_snippet](https://archive.blender.org/developer/P1508.txt) ``` diff --git a/source/blender/blenkernel/intern/workspace.c b/source/blender/blenkernel/intern/workspace.c index 4625fd76293..82cdc5abd84 100644 --- a/source/blender/blenkernel/intern/workspace.c +++ b/source/blender/blenkernel/intern/workspace.c @@ -307,7 +307,7 @@ WorkSpaceLayout *BKE_workspace_layout_find(const WorkSpace *workspace, const bSc "This should not happen!\n", __func__, workspace->id.name + 2, - screen->id.name + 2); + screen ? screen->id.name + 2 : "Unknown"); return NULL; } ``` CC @JulianEisel
Philipp Oeser changed title from Blender crashes/closes when clicking the “Modeling” tab to Blender crashes/closes when clicking a workspace tab (that is in fullscreen in a second window) 2020-07-07 12:09:08 +02:00

This issue was referenced by 304767dcd3

This issue was referenced by 304767dcd3459d222d8c6011e913840df74a6cd5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-08-04 20:12:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78688
No description provided.