source/blender/editors/include/ED_screen.h
@@ -287,6 +287,12 @@ bool ED_workspace_delete(struct WorkSpace *workspace,
                          struct bContext *C,
                          struct wmWindowManager *wm) ATTR_NONNULL();
 void ED_workspace_scene_data_sync(struct WorkSpaceInstanceHook *hook, Scene *scene) ATTR_NONNULL();
+struct WorkSpaceLayout *ED_workspace_screen_change_ensure_unused_layout(
+    struct Main *bmain,
+    struct WorkSpace *workspace,
+    struct WorkSpaceLayout *layout_new,
+    const struct WorkSpaceLayout *layout_fallback_base,
+    struct wmWindow *win) ATTR_NONNULL();
 struct WorkSpaceLayout *ED_workspace_layout_add(struct Main *bmain,
                                                 struct WorkSpace *workspace,
                                                 struct wmWindow *win,
