source/blender/editors/screen/screen_intern.h
@@ -50,11 +50,11 @@ bScreen *screen_add(struct Main *bmain, const char *name, const rcti *rect);
 void screen_data_copy(bScreen *to, bScreen *from);
 void screen_new_activate_prepare(const wmWindow *win, bScreen *screen_new);
 void screen_change_update(struct bContext *C, wmWindow *win, bScreen *screen);
-bScreen *screen_change_prepare(bScreen *screen_old,
-                               bScreen *screen_new,
-                               struct Main *bmain,
-                               struct bContext *C,
-                               wmWindow *win);
+void screen_change_prepare(bScreen *screen_old,
+                           bScreen *screen_new,
+                           struct Main *bmain,
+                           struct bContext *C,
+                           wmWindow *win);
 ScrArea *area_split(
     const wmWindow *win, bScreen *screen, ScrArea *area, char dir, float fac, int merge);
 int screen_area_join(struct bContext *C, bScreen *screen, ScrArea *sa1, ScrArea *sa2);
